Fix block entry-snapshots not inheriting stack slots (bug 669950, r=sstangl).